--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -20,6 +20,7 @@
 	height:94%;
 	object-fit:contain;	
 	float: left;	
+	position: relative;
 }
 .image{
 	width: 100%;
@@ -59,5 +60,54 @@
 	top:40%;
 	left:40%;
 }
-
+.specialbutton{
+	width:20%;
+	/*background-color: aqua;*/	
+	margin:0% 10%;
+}
+.specialbuttondiv{
+	position: absolute;
+	top:26%;
+	left: 0%;
+	width:100%;
+	height:8%;
+	display: inline-flex;
+}
+.left{
+	background-image:url("../image/go.png");
+	background-size:cover;
+}
+.center{
+	background-image:url("../image/stop.png");
+	background-size:cover;
+}
+.right{
+	background-image:url("../image/return.png");
+	background-size:cover;
+}
+.personaldata{
+	width:100%;
+	height:50%;
+	position:absolute;
+	top:40%;
+}
+.personaldatadetail{
+	height:17%;
+	margin-bottom:8%;
+	margin-right:13%;
+	margin-left:13%;
+	text-align:center;
+	display: flex;
+	padding-top:5%; 
+}
+/*之後為了動態更改div的內容先設置不同的class name*/
+.personone{
+	background-image:url("../image/data.png");
+}
+.persontwo{
+	background-image:url("../image/data.png");
+}
+.personthree{
+	background-image:url("../image/data.png");
+}
 
