--- a/style/entername.css
+++ b/style/entername.css
@@ -43,5 +43,33 @@
     object-fit:contain;
 }
 .intropeoplegoimage{
-   
+   width:100%;
+   height:100%;
+}
+.introentername{
+    width:100%;
+    height:100%;
+}
+.introenternamediv{
+    width:100%;
+    height:20%;
+    object-fit:contain;
+}
+.introinput{
+    width:70%;
+    /*我設絕對*/
+    height:50px;
+    margin-left:5%;
+    margin-right:1%;
+    margin-top:10%;
+}
+.introbutton{
+    width:18%;
+    height:50px;
+}
+.introform{
+    position:absolute;
+    top:50%;
+    right:15%;
+    width:45%;
 }
