:sparkles: Add rules and naming window.

--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -98,7 +98,24 @@
 	margin-left:13%;
 	text-align:center;
 	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
 	padding-top:5%; 
+}
+
+.personaldatadetail p{
+	font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-weight: bold;
+}
+
+.personaldatadetail p.player_name{
+	margin-top: 20px;
+	margin-bottom: 2px;
+}
+
+.personaldatadetail p.player_count{
+	margin-top: 5px;
+	margin-bottom: 40px;
 }
 /*之後為了動態更改div的內容先設置不同的class name*/
 .personone{
@@ -111,3 +128,46 @@
 	background-image:url("../image/data.png");
 }
 
+#dialogoverlay{
+	display: none;
+	opacity: 0.8;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	background: #FFF;
+	width: 100%;
+	z-index: 10;
+}
+
+#dialogbox{
+	display: none;
+	position: fixed;
+	background: #000;
+	border-radius: 7px;
+	width: 550px;
+	z-index: 10;
+}
+
+#dialogbox div{
+	background: #FFF;
+	margin: 8px;
+}
+
+#dialogbox div#dialogboxhead{
+	background: #666;
+	font-size: 19px;
+	padding: 10px;
+	color: white;
+}
+
+#dialogbox div#dialogboxbody{
+	background: #333;
+	padding: 20px;
+	color: #FFF;
+}
+
+#dialogbox div#dialogboxfoot{
+	background: #666;
+	padding: 10px;
+	text-align: right;
+}
