--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -21,7 +21,20 @@
 	object-fit:contain;	
 	float: left;	
 	position: relative;
+	display: flex;
+	flex-direction: column;
 }
+
+.counter{
+	position: absolute;
+	text-align: center;
+	top: 7%;
+	left: 40%;
+	font-size: large;
+}
+
+#time_counter{display: none;}
+
 .image{
 	width: 100%;
 	height: 80%;
@@ -64,6 +77,15 @@
 	width:20%;
 	/*background-color: aqua;*/	
 	margin:0% 10%;
+}
+
+.specialbutton:hover{
+	transform: scale(1.2);
+	cursor: pointer;
+}
+
+.specialbutton:active{
+	transform: scale(1);
 }
 .specialbuttondiv{
 	position: absolute;
