--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -171,7 +171,7 @@
 	background-image:url("../image/backgroundimage.png");
 	opacity:0.85;
 	background-position:50%;
-	background-size:contain;
+	background-size:540px;
 	background-repeat: no-repeat;
 }
 
