--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -39,6 +39,13 @@
 	width: 100%;
 	height: 80%;
 }
+
+figcaption{
+	text-align: center;
+	font-weight: bold;
+	color: #FFF;
+}
+
 .rightframe{
 	margin-top:3%;
 	margin-bottom:3%;
@@ -69,7 +76,7 @@
 	bottom:0px;
 	right: 0px;
 }
-.ghost{
+.Player3{
 	top:40%;
 	left:40%;
 }
